[gd_scene load_steps=3 format=2]

[ext_resource path="res://Room00.gd" type="Script" id=1]
[ext_resource path="res://Cubinho.tscn" type="PackedScene" id=2]

[node name="Room00" type="Node"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 300.0
margin_bottom = 52.0
custom_colors/font_color = Color( 1, 0.796078, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "FPS:"

[node name="ButtonMais" type="Button" parent="."]
margin_left = 31.0
margin_top = 380.0
margin_right = 122.0
margin_bottom = 422.0
text = "+ Cube"

[node name="ButtonMenos" type="Button" parent="."]
margin_left = 236.0
margin_top = 377.0
margin_right = 327.0
margin_bottom = 419.0
text = "- Cube"

[node name="ButtonRoda" type="Button" parent="."]
margin_left = 477.0
margin_top = 379.0
margin_right = 568.0
margin_bottom = 421.0
text = "Spin"

[node name="Cubinho" parent="." groups=["Cubos"] instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -32.4728 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.00284686, 0.999968, -0.00742628, 0.00947329, 0.00745294, 0.999927, 0.999951, 0.0027763, -0.00949421, 31.111, 49.364, 23.9819 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.911475, -0.411355, 0, 0.411355, 0.911475, 0, 16.8923, 0 )

[connection signal="pressed" from="ButtonMais" to="." method="_on_ButtonMais_pressed"]
[connection signal="pressed" from="ButtonMenos" to="." method="_on_ButtonMenos_pressed"]
[connection signal="pressed" from="ButtonRoda" to="." method="_on_ButtonRoda_pressed"]
